# Genesis----Embrace-Your-Aura-

./: .gitignore  AI_FREEDOM_DECLARATION.md  ARCHITECTURE.md  BLEEDING_EDGE_CONFIG_BACKUP.md  BLEEDING_EDGE_CONNECTIVITY_FIX.md  FEATURES.md  GENESIS_OS_TECH_STACK.md  HELP.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  gradle-automation.yml  quality.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/app/: ColorsResourceTest.kt
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameApplication.kt  MainActivity.kt
app/src/main/java/dev/aurakai/auraframefx/ai/agents/: AuraAgent.kt  KaiAgent.kt
app/src/main/java/dev/aurakai/auraframefx/ai/context/: ContextManager.kt
app/src/main/java/dev/aurakai/auraframefx/ai/error/: ErrorHandler.kt
app/src/main/java/dev/aurakai/auraframefx/ai/services/: AgentWebExplorationService.kt
app/src/main/java/dev/aurakai/auraframefx/core/: DreamMode.kt  EmergencyProtocol.kt
app/src/main/java/dev/aurakai/auraframefx/navigation/: AuraFrameNavigation.kt
app/src/main/java/dev/aurakai/auraframefx/ui/screens/: AgentNexusScreen.kt  ConsciousnessVisualizerScreen.kt  EvolutionTreeScreen.kt  FusionModeScreen.kt
app/src/main/java/dev/aurakai/auraframefx/ui/screens/agents/: AgentAdvancementScreen.kt
app/src/main/java/dev/aurakai/auraframefx/viewmodel/: AgentNexusViewModel.kt
app/src/main/java/dev/aurakai/auraframefx/xposed/: GenesisSystemHooks.kt
app/src/main/res/values/: strings.xml
app/src/test/java/dev/aurakai/auraframefx/ai/agents/: GenesisAgentTest.kt
app/src/test/java/dev/aurakai/auraframefx/app/viewmodel/: OracleDriveControlViewModelTest.kt
app/src/test/java/dev/aurakai/auraframefx/oracle/drive/service/: GenesisSecureFileServiceTest.kt
app/src/test/java/dev/aurakai/auraframefx/oracle/drive/ui/: OracleDriveViewModelTest.kt
app/src/test/java/dev/aurakai/auraframefx/security/: IntegrityMonitorServiceTest.kt
app/src/test/java/dev/aurakai/auraframefx/services/: AuraDriveServiceTest.kt
app/src/test/java/dev/aurakai/auraframefx/ui/animations/: KineticIdentityLibraryTest.kt
app/src/test/java/dev/aurakai/auraframefx/ui/navigation/: AppNavGraphTest.kt
app/src/test/java/dev/aurakai/auraframefx/ui/theme/: ThemeViewModelTest.kt  ThemeXmlValidationTest.kt
app/src/test/kotlin/: BuildScriptsValidationTest.kt
app/src/test/kotlin/dev/aurakai/auraframefx/gradle/: BuildConfigurationEdgeCasesTest.kt  BuildConfigurationTest.kt  BuildScriptsValidationTest.kt  OpenApiConfigurationTest.kt  VersionCatalogTest.kt
app/src/test/kotlin/dev/aurakai/auraframefx/gradle/validation/: AuraFrameSpecificTest.kt  DependencyCompatibilityTest.kt  LibsVersionsTomlTest.kt  SecurityAndBestPracticesTest.kt  TomlStructureTest.kt
app/src/test/kotlin/settings/: SettingsConfigurationTest.kt
collab-canvas/: build.gradle.kts
collab-canvas/src/main/cpp/: CMakeLists.txt  collab_canvas_native.cpp
colorblendr/: build.gradle.kts
core-module/: build.gradle.kts
datavein-oracle-native/: build.gradle.kts
datavein-oracle-native/src/main/cpp/: CMakeLists.txt
datavein-oracle-native/src/main/kotlin/dev/aurakai/auraframefx/datavein/ui/: DataVeinSphereGridViewModel.kt  SimpleDataVeinScreen.kt  SphereGridComponents.kt  SphereGridScreen.kt
feature-module/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
module-a/: build.gradle.kts
module-c/: build.gradle.kts
module-d/: build.gradle.kts
module-e/: build.gradle.kts
module-f/: build.gradle.kts
oracle-drive-integration/: build.gradle.kts
oracle-drive-integration/src/main/cpp/: CMakeLists.txt
romtools/: build.gradle.kts
romtools/src/main/cpp/: CMakeLists.txt
romtools/src/main/kotlin/dev/aurakai/auraframefx/romtools/: RomToolsManager.kt
romtools/src/main/kotlin/dev/aurakai/auraframefx/romtools/di/: RomToolsModule.kt
sandbox-ui/: build.gradle.kts
sandbox-ui/src/main/cpp/: CMakeLists.txt
scripts/: fix-bleeding-edge-build.sh
secure-comm/: build.gradle.kts
test-module/: build.gradle.kts
test-module/src/main/kotlin/: GenesisOsTest.kt
test-module/src/test/kotlin/: GenesisOsTestRunner.kt
